Update azure-pipelines.yml for Azure Pipelines
s

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,8 @@ stages:
   - job: MavenPackageAndPublishArtifacts
     displayName: Maven Package and Publish Artifacts
     pool:
-      vmImage: $(vmImageName)
+      #vmImage: $(vmImageName)
+      name: vmImageName
 
     steps:
     - task: Maven@3
