--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ variables:
   environmentName: 'my-app-name2'
 
   # Agent VM image name
-  vmImageName: AWS-AZURE
+ # vmImageName: AWS-AZURE
   #'ubuntu-latest'
 
 stages:
@@ -29,7 +29,7 @@ stages:
     displayName: Maven Package and Publish Artifacts
     pool:
       #vmImage: $(vmImageName)
-      name: $(vmImageName)
+      name: AWS-AZURE
 
     steps:
     - task: Maven@3
